--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Elia's Personal Page
 email: "e.bellussi@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
-  This is Elia's personal web page. It's about his education and working experience.
+  This is Elia's personal web page; about his education and working experience.
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
