--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -2,22 +2,22 @@ docs_list_title: Pages
 docs:
 
 - title: Home
-  url: /_site/home.html
+  url: home.html
 
 - title: Education
-  url: /_site/education.html
+  url: education.html
 
 - title: Experience
-  url: /_site/experience.html
+  url: experience.html
 
 - title: Certifications
-  url: /_site/certifications.html
+  url: certifications.html
 
 - title: Articles
-  url: /_site/articles.html
+  url: articles.html
 
 - title: Presentations
-  url: /_site/presentations.html
+  url: presentations.html
 
 - title: Motivation
-  url: /_site/motivation.html
+  url: motivation.html
