--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Elia's Personal Website
 email: "e.bellussi@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
-  Working experience and education.
+  Working Experience and Education.
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
