--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -16,5 +16,5 @@ docs:
 - title: Presentations
   url: /presentations.html
 
-#- title: Motivation
-#  url: /motivation.html
+- title: Motivation
+  url: /motivation.html
