--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Elia's Personal Website
 email: "e.bellussi@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
   Work Experience and Education
-license: BY-NC-SA 4.0
+license: CC BY-NC-SA 4.0
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
