--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -10,8 +10,8 @@ docs:
 - title: Certifications
   url: /certifications.html
 
-- title: Articles
-  url: /articles.html
+- title: Documents
+  url: /documents.html
 
 - title: Presentations
   url: /presentations.html
